[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fish/fishTile_075.png" type="Texture" id=1]
[ext_resource path="res://Fish/Fish.gd" type="Script" id=2]
[ext_resource path="res://Fish/fishTile_077.png" type="Texture" id=3]
[ext_resource path="res://Fish/fishTile_079.png" type="Texture" id=4]
[ext_resource path="res://Fish/fishTile_073.png" type="Texture" id=5]
[ext_resource path="res://Fish/fishTile_093.png" type="Texture" id=6]
[ext_resource path="res://Fish/fishTile_095.png" type="Texture" id=7]
[ext_resource path="res://Fish/fishTile_097.png" type="Texture" id=8]
[ext_resource path="res://Fish/fishTile_099.png" type="Texture" id=9]
[ext_resource path="res://Fish/fishTile_091.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=3]
radius = 13.0

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton2D/BodyMid/Head:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton2D/BodyMid/BodyBack/Tail:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton2D/BodyMid/BodyBack:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skeleton2D/BodyMid:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton2D/BodyMid/BodyBack:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0, -15.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton2D/BodyMid/BodyBack/Tail:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton2D/BodyMid/Head:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0, 15.0 ]
}

[node name="Fish" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Polygons" type="Node2D" parent="."]
visible = false
position = Vector2( -32, -32 )

[node name="Polygon2D" type="Polygon2D" parent="Polygons"]
texture = ExtResource( 1 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( 1.0556, 33.8731, 1.0556, 28.2051, 14.8208, 18.8934, 21.0286, 18.7584, 23.1879, 21.5924, 40.5968, 12.5506, 55.0367, 12.8205, 55.1717, 19.5682, 65.0232, 29.2847, 64.8883, 34.1431, 51.258, 48.7179, 46.5347, 48.9879, 43.4308, 52.7665, 31.1501, 52.6316, 19.0043, 47.9082, 18.4645, 44.8043, 13.7412, 44.6694, 13.8761, 31.9838, 22.3781, 32.5236, 30.4753, 32.7935, 39.5171, 32.6586, 48.424, 31.9838, 56.6561, 31.7139 )
uv = PoolVector2Array( 1.0556, 33.8731, 1.0556, 28.2051, 14.8208, 18.8934, 21.0286, 18.7584, 23.1879, 21.5924, 40.5968, 12.5506, 55.0367, 12.8205, 55.1717, 19.5682, 65.0232, 29.2847, 64.8883, 34.1431, 51.258, 48.7179, 46.5347, 48.9879, 43.4308, 52.7665, 31.1501, 52.6316, 19.0043, 47.9082, 18.4645, 44.8043, 13.7412, 44.6694, 13.8761, 31.9838, 22.3781, 32.5236, 30.4753, 32.7935, 39.5171, 32.6586, 48.424, 31.9838, 56.6561, 31.7139 )
polygons = [ PoolIntArray( 1, 17, 0 ), PoolIntArray( 17, 2, 1 ), PoolIntArray( 17, 3, 2 ), PoolIntArray( 17, 4, 3 ), PoolIntArray( 17, 16, 0 ), PoolIntArray( 17, 18, 4 ), PoolIntArray( 16, 18, 17 ), PoolIntArray( 15, 18, 16 ), PoolIntArray( 15, 13, 14 ), PoolIntArray( 15, 19, 18 ), PoolIntArray( 13, 19, 15 ), PoolIntArray( 19, 4, 18 ), PoolIntArray( 19, 5, 4 ), PoolIntArray( 20, 5, 19 ), PoolIntArray( 19, 12, 20 ), PoolIntArray( 19, 13, 12 ), PoolIntArray( 20, 21, 12 ), PoolIntArray( 11, 21, 12 ), PoolIntArray( 11, 10, 21 ), PoolIntArray( 20, 6, 5 ), PoolIntArray( 21, 6, 20 ), PoolIntArray( 6, 7, 21 ), PoolIntArray( 21, 22, 7 ), PoolIntArray( 22, 8, 7 ), PoolIntArray( 22, 9, 8 ), PoolIntArray( 22, 10, 9 ), PoolIntArray( 22, 21, 10 ) ]
bones = [ NodePath("BodyMid"), PoolRealArray( 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0.5, 1, 0.5, 0 ), NodePath("BodyMid/BodyBack"), PoolRealArray( 0, 0, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0.5, 1, 1, 0, 0, 0 ), NodePath("BodyMid/BodyBack/Tail"), PoolRealArray( 1, 1, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0, 0, 0, 0, 0 ), NodePath("BodyMid/Head"), PoolRealArray( 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, 0.5, 1, 1 ) ]
internal_vertex_count = 6

[node name="PolygonsLarge" type="Node2D" parent="."]
position = Vector2( -32, -32 )

[node name="Polygon2D" type="Polygon2D" parent="PolygonsLarge"]
texture = ExtResource( 4 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( -0.563833, 38.1916, -1.00416, 29.8687, 6.32626, 18.2713, 14.2037, 17.7243, 18.4707, 19.4748, 28.0987, 8.75274, 52.7158, 5.68928, 57.4203, 14.7702, 66.0637, 25.8206, 65.9543, 42.779, 58.0768, 52.6258, 51.7311, 54.3764, 45.7136, 59.1904, 36.0856, 58.9715, 27.9893, 57.221, 19.346, 50.7659, 8.62385, 50.3282, 13.8761, 31.9838, 22.3781, 32.5236, 30.4753, 32.7935, 39.5171, 32.6586, 48.424, 31.9838, 56.6561, 31.7139 )
uv = PoolVector2Array( -1.10364, 36.3023, -1.37355, 31.1741, 8.478, 16.1943, 15.9004, 15.6545, 19.0043, 19.4332, 24.8073, 8.36707, 53.4173, 4.72335, 55.7115, 14.17, 65.563, 27.9352, 66.1028, 45.8839, 57.8707, 53.9811, 52.7425, 54.386, 46.6696, 58.5695, 31.6899, 57.6248, 22.5131, 52.3617, 19.949, 48.3131, 12.6615, 51.0121, 13.8761, 31.9838, 22.3781, 32.5236, 30.4753, 32.7935, 39.5171, 32.6586, 48.424, 31.9838, 56.6561, 31.7139 )
polygons = [ PoolIntArray( 1, 17, 0 ), PoolIntArray( 17, 2, 1 ), PoolIntArray( 17, 3, 2 ), PoolIntArray( 17, 4, 3 ), PoolIntArray( 17, 16, 0 ), PoolIntArray( 17, 18, 4 ), PoolIntArray( 16, 18, 17 ), PoolIntArray( 15, 18, 16 ), PoolIntArray( 15, 13, 14 ), PoolIntArray( 15, 19, 18 ), PoolIntArray( 13, 19, 15 ), PoolIntArray( 19, 4, 18 ), PoolIntArray( 19, 5, 4 ), PoolIntArray( 20, 5, 19 ), PoolIntArray( 19, 12, 20 ), PoolIntArray( 19, 13, 12 ), PoolIntArray( 20, 21, 12 ), PoolIntArray( 11, 21, 12 ), PoolIntArray( 11, 10, 21 ), PoolIntArray( 20, 6, 5 ), PoolIntArray( 21, 6, 20 ), PoolIntArray( 6, 7, 21 ), PoolIntArray( 21, 22, 7 ), PoolIntArray( 22, 8, 7 ), PoolIntArray( 22, 9, 8 ), PoolIntArray( 22, 10, 9 ), PoolIntArray( 22, 21, 10 ) ]
bones = [ NodePath("BodyMid"), PoolRealArray( 0, 0, 0, 0, 0, 0.5, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0.5, 1, 0.5, 0 ), NodePath("BodyMid/BodyBack"), PoolRealArray( 0, 0, 0.5, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 0.5, 0.5, 1, 1, 0, 0, 0 ), NodePath("BodyMid/BodyBack/Tail"), PoolRealArray( 1, 1, 0.5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0.5, 0, 0, 0, 0, 0 ), NodePath("BodyMid/Head"), PoolRealArray( 0, 0, 0, 0, 0, 0.5, 0.5, 0.5, 1, 1, 0.5, 0.5, 0.5, 0, 0, 0, 0, 0, 0, 0, 0.5, 1, 1 ) ]
internal_vertex_count = 6

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="BodyMid" type="Bone2D" parent="Skeleton2D"]
position = Vector2( 8, 0 )
rest = Transform2D( 1, 0, 0, 1, 8, 0 )

[node name="BodyBack" type="Bone2D" parent="Skeleton2D/BodyMid"]
position = Vector2( -17, 0 )
rest = Transform2D( 1, 0, 0, 1, -17, 0 )

[node name="Tail" type="Bone2D" parent="Skeleton2D/BodyMid/BodyBack"]
position = Vector2( -11, 0 )
rest = Transform2D( 1, 0, 0, 1, -11, 0 )

[node name="Head" type="Bone2D" parent="Skeleton2D/BodyMid"]
position = Vector2( 13, 0 )
rest = Transform2D( 1, 0, 0, 1, 13, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 0 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 1 )
anims/move = SubResource( 2 )
blend_times = [ "move", "idle", 0.4 ]

[node name="Sprites" type="Node2D" parent="."]
visible = false
position = Vector2( -72, -24 )

[node name="fishTile_075" type="Sprite" parent="Sprites"]
position = Vector2( -16, -40 )
texture = ExtResource( 1 )

[node name="fishTile_077" type="Sprite" parent="Sprites"]
position = Vector2( -16, -40 )
texture = ExtResource( 3 )

[node name="fishTile_073" type="Sprite" parent="Sprites"]
position = Vector2( -16, -40 )
texture = ExtResource( 5 )

[node name="fishTile_079" type="Sprite" parent="Sprites"]
position = Vector2( -16, -40 )
texture = ExtResource( 4 )

[node name="SpritesDeep" type="Node2D" parent="."]
visible = false
position = Vector2( -72, -24 )

[node name="fishTile_091" type="Sprite" parent="SpritesDeep"]
position = Vector2( 0, -56 )
texture = ExtResource( 10 )

[node name="fishTile_093" type="Sprite" parent="SpritesDeep"]
position = Vector2( 0, -56 )
texture = ExtResource( 6 )

[node name="fishTile_095" type="Sprite" parent="SpritesDeep"]
position = Vector2( 0, -56 )
texture = ExtResource( 7 )

[node name="fishTile_097" type="Sprite" parent="SpritesDeep"]
position = Vector2( 0, -56 )
texture = ExtResource( 8 )

[node name="fishTile_099" type="Sprite" parent="SpritesDeep"]
position = Vector2( 0, -56 )
texture = ExtResource( 9 )

[node name="MoveTimer" type="Timer" parent="."]

[node name="IdleTimer" type="Timer" parent="."]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
